@@ -59,7 +59,9 @@ i.e., use Eq. (20) instead of (18); see (Rezaei, Franti, 2016).}
 \value{
 Each cluster validity measure is a single numeric value.
 
-\code{normalized_confusion_matrix()} returns an integer matrix.
+\code{normalized_confusion_matrix()} returns a numeric matrix.
+
+\code{normalizing_permutation()} returns a vector of indexes.
 }
 \description{
 The functions described in this section quantify the similarity between
@@ -67,11 +69,11 @@ two label vectors \code{x} and \code{y} which represent two partitions
 of a set of \eqn{n} elements into, respectively, \eqn{K} and \eqn{L}
 nonempty and pairwise disjoint subsets.
 
-For instance, \code{x} and \code{y} can be two clusterings
+For instance, \code{x} and \code{y} can represent two clusterings
 of a dataset with \eqn{n} observations specified by two vectors
-of labels. These functions can be used as external cluster
+of labels. The functions described here can be used as external cluster
 validity measures, where we assume that \code{x} is
-the reference (ground-truth) partition (compare Gagolewski, 2022).
+a reference (ground-truth) partition.
 }
 \details{
 Each index except \code{adjusted_asymmetric_accuracy()}
